# Ting

Oblig/: CMakeLists.txt  main.cpp  oblig_1_mbb.cpp  oblig_1_mbb.h
Oblig2/: CMakeLists.txt  main.cpp  oblig2_mbb.cpp  oblig2_mbb.h
Oblig3/: CMakeLists.txt  main.cpp  oblig3_mbb.cpp  oblig3_mbb.h
Satellitt-labz/: CMakeLists.txt  tempwatch.cpp  tempwatch.h
build-Oblig-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Oblig-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Oblig2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Oblig2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Oblig3-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  A_myHouseOUT.txt  B_myHouseOUT.txt  CMakeCache.txt.prev  C_myHouseOUT.txt  build.ninja  cmake_install.cmake  myHouse.txt  myHouseIN.txt
build-Oblig3-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Satellitt-labz-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-Satellitt-labz-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-new_shit-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-new_shit-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
(+110 files in other folders)
